--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
   </head>
   <body>
     <main>
-      <span>Advice #<span id="adviseID">143</span></span> 
+      <span>Advice #<span id="adviseID"></span></span> 
 
-      <p id="advise"><!-- Advice text goes here --> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quia, dolor nemo voluptates omnis in! </p> 
+      <p id="advise"><!-- Advice text goes here -->  </p> 
       <div class="divider">
         <img src="./images/pattern-divider-desktop.svg" alt="end">
 
